seminarix-handbook (0.1.9) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Ferdinand Thommes ]
  * fixed html

 -- Ferdinand Thommes <devil@sidux.com>  Fri, 21 Dec 2007 10:44:57 +0100

seminarix-handbook (0.1.8) unstable; urgency=low

  * new version of handbook edited by bluewater

 -- Ferdinand Thommes <devil@sidux.com>  Thu, 20 Dec 2007 19:52:28 +0100

seminarix-handbook (0.1.7) unstable; urgency=low

  * uploaded new version of seminarix handbook

 -- Ferdinand Thommes <devil@sidux.com>  Thu, 20 Dec 2007 14:07:28 +0100

seminarix-handbook (0.1.6) unstable; urgency=low

  * updated allgemein.html informatik.html kunst.html

 -- Ferdinand Thommes <devil@sidux.com>  Sun, 09 Dec 2007 15:39:03 +0100

seminarix-handbook (0.1.5) unstable; urgency=low

  * added new file dir
  * updated seminarix-intern.html
  * fixed tags in seminarix-intern.html
  * fixed tags again in seminarix-intern.html
  * dch updated musik.html seminarix-intern.html

 -- Ferdinand Thommes <devil@sidux.com>  Thu, 06 Dec 2007 19:14:19 +0100

seminarix-handbook (0.1.4) unstable; urgency=low

  * seminarix-intern.html updated
  * chemie.html allgemein.html updated

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 28 Nov 2007 11:08:19 +0100

seminarix-handbook (0.1.3) unstable; urgency=low

  * name in desktop symbol changed

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 27 Nov 2007 11:49:28 +0100

seminarix-handbook (0.1.2) unstable; urgency=low

  * all html files and additional files

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 26 Nov 2007 16:53:59 +0100

seminarix-handbook (0.1.1) unstable; urgency=low

  [ Horst Tritremmel ]
  * Dinko Sabo added to copyright

  [ Stefan Lippers-Hollmann ]
  * fix lintian errors.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 25 Nov 2007 21:18:16 +0100

seminarix-handbook (0.1.0) unstable; urgency=low

  [ Horst Tritremmel ]
  * Initial release
  * desktop menu added
  * debian/control fixed
  * second fix debian/control