@@ -1,69 +1,31 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="de-DE">
 <head>
+<title>sidux seminarix manual</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<style type="text/css" media="all">@import url("./lib/css-js/content.css");</style>
+<SCRIPT LANGUAGE="JavaScript1.2">
+<!-- Begin
+if (navigator.appName == 'Netscape')
+var language = navigator.language;
+else
+var language = navigator.browserLanguage;
 
-  <meta content="Willkommen auf der Website des Projektes SEMINARIX - der LiveCD f&uuml;r die Lehrerausbildung" name="description">
+if (language.indexOf('de') > -1) document.location.href = './files/willkommen.html';
+else if (language.indexOf('en') > -1) document.location.href = './files/willkommen.html';
 
-  <meta content="0" http-equiv="expires">
-
-  <meta content="seminarix.org" http-equiv="reply-to">
-
-  <meta content="Studienseminar Neuss" name="publisher">
-
-  <meta content="Zimmermann" name="copyright">
-
-  <meta content="Studienseminar Neuss, Lehrerausbildung, Linux, sidux, Linux in der Lehrerausbildung, NRW, LiveCD" name="keywords">
-
-  <meta content="INDEX, FOLLOW" name="ROBOTS">
-
-  <meta content="de" name="Content-Language">
-
-  <meta content="20 days" name="revisit-after">
-
-  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-
-  <meta content="Wolf-Dieter Zimmermann" name="Author">
-
-  <meta content="Mozilla/4.6 [de] (Win95; I) [Netscape]" name="GENERATOR">
-  <title>Seminarix Index</title>
-
-
-  <link rel="stylesheet" href="lib/css-js/seminarix.css" type="text/css">
-
+else
+document.location.href = './de/willkommen.html.html';
+// End -->
+</script>
 </head>
-<body style="max-width:555px;">
-<div class="seite">
-
-	<ul style="list-style:none;">
-		<li>
-		<img name="logoseminarix" src="lib/images/logos/seminarix_logo_hp.png" alt="Logo SEMINARIX-SIDUX" width="256" height="100" border="0" title="Logo SEMINARIX-SIDUX">
-		</li>
-	</ul>
-	
-	<ul style="list-style:none;">
-		<li><span class="bold">Willkommen bei Seminarix dem EDU Projekt von sidux<br>
-		Welcome to Seminarix the EDU Project of sidux</span></li>
-		<li>&nbsp;</li>
-		
-		<li>Wollen Sie mehr &#252;ber Seminarix erfahren, so nutzen Sie folgenden Link:</li>
-		
-		<li><a href="files/de/willkommen.html" target="_top">Seminarix-Manual Deutsch</a></li>
-		
-		<li>&nbsp;</li>
-				
-		<li>&nbsp;</li>
-		
-		<li>M&#246;chten Sie mehr &#252;ber sidux erfahren, so nutzen Sie folgenden Link:</li>
-		
-		<li><a href="/usr/share/sidux-manual/de/welcome-de.htm" target="_blank">sidux-Manual Deutsch</a></li>
-		
-		<li>&nbsp;</li>
-		
-		<li>Do you want to know more about sidux, please choose the following Link:</li>
-		
-		<li><a href="/usr/share/sidux-manual/en/welcome-en.htm" target="_blank">sidux-Manual English</a></li>
-	</ul>
-</div>
+<center>
+<img src="./lib/logos/sidux-logo.png" alt="logo" id="menu-header" /><br>
+<img src="./lib/logos/sidux-book.gif" alt="logo-book" id="menu-header1" />
+<br>
+<br>
+Welcome to the sidux manual. Please select your language:<br>
+<br>
+<a href="./files/willkommen.html">Deutsch</a><br><a href="./files/willkommen.html"><img src="./lib/flags/de-flag.png" title="DE" alt="DE" /><br>
 
 </body>
+</SCRIPT>
 </html>
